<resources>
    <string name="app_name">TravelTrackerApp</string>
    <string name="app_logo_description">Logo of App</string>
    <string name="app_name_load_screen">Travel\nTracker</string>
    <string name="app_name_main_screen">Travel Tracker</string>
    <string name="load_screen_cloud">Load screen cloud</string>
    <string name="map_pin_1">Map pin 1</string>
    <string name="map_pin_2">Map pin 2</string>
    <string name="map_pin_3">Map pin 3</string>
    <string name="map">Map</string>
    <string name="home_nav_menu">Главная</string>
    <string name="places_nav_menu">Места</string>
    <string name="add_place_button">Add place</string>
    <string name="photo_of_place">Photo of place</string>
    <string name="trashcan_icon">Корзина</string>
    <string name="place_name"><u>Кофейня Bloom</u></string>
    <string name="place_name_edit_icon">Place\'s name edit icon</string>
    <string name="place_description">Самая любимая кофейня на районе! Ходим с собачками каждый день, кофе всегда безупречен, есть свежейшая выпечка и чуду. В кофейне всегда царит невероятно добрая атмосфера и уют! Зашёл, захожу и не жалею ❤️</string>
    <string name="place_address_pin">place_address_pin</string>
    <string name="place_address"><u>Координаты: 0.0, 0.0</u></string>
    <string name="refresh_address_icon">refresh_address_icon</string>
    <string name="toolbar_save_icon">Сохранить</string>
    <string name="no_image_place">No image place</string>
    <string name="new_place_name">Без названия</string>
    <string name="new_place_description">Без описания</string>
    <string name="new_place_address">Адрес не найден</string>
    <string name="google_widget">Google widget</string>
    <string name="card_place_photo">Card place photo</string>
    <string name="edit_icon">Редактировать</string>
    <string name="weather_string">Погода: ...</string>
</resources>