<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/app_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="141dp"
        android:layout_height="158dp"
        android:fontFamily="@font/pacifico_regular"
        android:gravity="center"
        android:text="@string/app_name_load_screen"
        android:textColor="@color/light_pink"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="211dp"
        android:layout_height="150dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/load_screen_cloud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cloud"
        android:alpha="0.5"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="211dp"
        android:layout_height="150dp"
        android:layout_marginStart="276dp"
        android:layout_marginBottom="28dp"
        android:alpha="0.5"
        android:contentDescription="@string/load_screen_cloud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cloud" />
</androidx.constraintlayout.widget.ConstraintLayout>